[gd_scene load_steps=10 format=3 uid="uid://cvexh50lxssni"]

[ext_resource type="Script" uid="uid://cagwqgidenf80" path="res://entities/tower/tower.gd" id="1_mg2hd"]
[ext_resource type="Script" uid="uid://bmk3mk28en4i6" path="res://data/types/tower_data.gd" id="2_nfofi"]
[ext_resource type="Texture2D" uid="uid://b5padmoifdgxq" path="res://assets/Placeholder/Tower/Rural Village Nature Objects No Shadows.png" id="2_r21n7"]
[ext_resource type="Script" uid="uid://fp0cmvspw53h" path="res://entities/tower/merge_level_label.gd" id="3_cbwxl"]
[ext_resource type="PackedScene" uid="uid://ttv6ybf8d58q" path="res://entities/tower/attack_component.tscn" id="3_w163v"]
[ext_resource type="Script" uid="uid://bbaxcgtdvg8m6" path="res://entities/tower/attack_component.gd" id="4_ndkb3"]

[sub_resource type="Resource" id="Resource_vec08"]
script = ExtResource("2_nfofi")
level = 1
metadata/_custom_type_script = "uid://bmk3mk28en4i6"

[sub_resource type="CircleShape2D" id="CircleShape2D_8wc2c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cbwxl"]
size = Vector2(64, 64)

[node name="Tower" type="Area2D" groups=["Tower"]]
script = ExtResource("1_mg2hd")
data = SubResource("Resource_vec08")

[node name="AttackComponent" parent="." instance=ExtResource("3_w163v")]
script = ExtResource("4_ndkb3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_r21n7")
region_enabled = true
region_rect = Rect2(0, 0, 48, 48)

[node name="RangeCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8wc2c")
debug_color = Color(0.572843, 0.0335731, 1.44392e-07, 0.419608)

[node name="DragNDropArea" type="Area2D" parent="."]

[node name="DragNDropCollision" type="CollisionShape2D" parent="DragNDropArea"]
shape = SubResource("RectangleShape2D_cbwxl")

[node name="MergeLevelLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -11.0
offset_right = 20.0
offset_bottom = 12.0
script = ExtResource("3_cbwxl")

[node name="InventoryUI" type="PanelContainer" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryUI"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryUI/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="InventoryUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Level 1"

[node name="Close" type="Button" parent="InventoryUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="UpgradeModules" type="GridContainer" parent="InventoryUI/VBoxContainer"]
layout_mode = 2
columns = 3

[connection signal="merge_level_changed" from="." to="MergeLevelLabel" method="_on_tower_merge_level_changed"]
[connection signal="mouse_entered" from="DragNDropArea" to="." method="_on_drag_n_drop_area_mouse_entered"]
[connection signal="mouse_exited" from="DragNDropArea" to="." method="_on_drag_n_drop_area_mouse_exited"]
[connection signal="pressed" from="InventoryUI/VBoxContainer/HBoxContainer/Close" to="." method="_on_close_pressed"]
